2002-12-01  Masao Mutoh  <mutoh@highway.ne.jp>

	* sample/misc/button2.rb: Add a file.
	* sample/misc/togglebutton.rb, checkbutton.rb, radiobutton.rb: 
	Add sample for mnemonic label and stock item.
	* src/rbgtkbutton.c, rbgtktogglebutton.c, rbgtkcheckbutton.c, rbgtkradiobutton.c: 
	Support mnemonic label or stock item in #initialize.
	* extconf.rb: Fix compile error about rbgdkcursor.h.
	Reported by Thorsten Roggendorf <schrotie@uni-bielefeld.de>, Bugs item #643915.

2002-11-29  OGASAWARA, Takeshi  <t-ogs@earth.email.ne.jp>

	* src/rbgtktextbuffer.c: Add Gtk::TextBuffer#insert_pixbuf,
	#insert_child_anchor, #create_child_anchor, #add_selection_clipboard,
	#remove_selection_clipboard, #cut_clipboard, #copy_clipboard,
	#paste_clipboard, #get_iter_at_child_anchor.
	* src/rbgtk.h: Add GTK_TYPE_CLIPBOARD.
	* src/rbgtktextattributes.c: Add file.
	* src/rbgtkclipboard.c: Add file.

2002-11-28  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgdkkeysyms/*: Abolished. Create rbgdkkeysyms.h instead.
	* extconf.rb: Follow above changes.
	* makegdkkeysyms.h: Append constants of Key symbols to Gdk::Keyval.
	* src/rbgdkkeyval.c: Include rbgdkkeysyms.h.
	
2002-11-23  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgdkkeyval.c: Rename Gdk::Keyval.name to Gdk::Keyval.to_name.
	* src/sample/misc/stock.rb: Add header.
	* src/rbgdkkeyval.c: Fix a small bug.
	* src/rbgtkselection.c: Rename method names(remove prefix selection_).

2002-11-23  OGASAWARA, Takeshi  <t-ogs@earth.email.ne.jp>

	* src/rbgtktextbuffer.c : Add Gtk::TextBuffer#insert_interactive,
	#insert_interactive_at_cursor, insert_range, insert_range_interactive,
	#delete_interactive, #get_text, #get_slice, #create_mark,
	#delete_mark, #get_mark, #place_cursor, #selection_bounds.
	* src/rbgtktextiter.c : Add Gtk::TextIter#editable?, #can_insert?,
	#attributes, #forward_to_end, #forward_to_tag_toggle,
	#backward_to_tag_toggle, #forward_find_char, #backward_find_char.
	The parenthesis mismatch of RVAL2TAG is fixed.
